Revert "minized dockerfile minimal jre to run application"
This reverts commit fa14c0a07aa5e94507719b42440fb1c4d88d4c9b.